# verl

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: e2e_ppo_trainer_veomni_vllm.yml  e2e_ppo_trainer_veomni_vllm_ascend.yml  e2e_sft_llm.yml  e2e_sft_llm_ascend.yml  e2e_sft_vlm.yml
examples/grpo_trainer/: run_qwen3_5-35b-a3b_veomni.sh
tests/special_e2e/: run_ppo_trainer_veomni.sh
verl/trainer/config/: _generated_ppo_veomni_trainer.yaml
verl/trainer/config/engine/: veomni.yaml
verl/trainer/config/ref/: veomni_ref.yaml
verl/workers/config/: engine.py
verl/workers/engine/veomni/: transformer_impl.py
